--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ repositories {
     mavenCentral()
 }
 
+compileJava{
+    options.encoding='UTF-8'
+}
+compileTestJava{
+    options.encoding='UTF-8'
+}
+
 def allureVersion = "2.17.3",
     selenideVersion = "6.9.0",
     junitVersion = "5.8.2"
